# autoapply

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  start.sh
UI/: .env.example  Dockerfile  package.json  vite.config.ts
UI/agent_stuff/: connect-backend.md  repo-structure.md
UI/src/: App.tsx  types.ts
UI/src/components/: PrivateRoute.tsx
UI/src/contexts/: AuthContext.tsx
UI/src/pages/: Apply.tsx  Home.tsx  JobChat.tsx  JobList.tsx  JobMonitor.tsx  Login.tsx  Onboarding.tsx  Profile.tsx  Tailor.tsx
UI/src/utils/: api.ts
autoapply/: api.py  application_handlers.py  browser_manager.py  db.py  env.py  helpers.py  logging.py  models.py  resapp_ops.py  save.py  sse.py  utils.py
autoapply/core/: auth.py
autoapply/services/: db.py  llm.py  scrape_google_results.py  word.py
autoapply/services/llm/: __init__.py  agent.py  agents.py  models.py  prompts.py  streaming_agent.py  tools.py
init/: schema.sql
tests/: conftest.py  helpers.py  test_api_fetched.py  test_db.py  test_db_fetched.py  test_setup.py
